--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,9 @@ jobs:
 
       - name: Build with Brachyura
         run: java -jar brachyura-bootstrap-0.jar build
+
+      - name: Upload build Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: Artifacts
+          path: build/libs/
